// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic object type graph resolving loads from article to reply 1`] = `
Object {
  "article": Object {
    "createdAt": "2018-10-29T02:59:39.039Z",
    "paragraphs": Array [
      Object {
        "canDelete": false,
        "id": "p1",
        "paragraphReplies": Array [
          Object {
            "canDelete": false,
            "id": "5bd677bb092a3ee2541b1a0d",
            "reply": Object {
              "id": "r1",
              "text": "「外國同性戀藉結婚來台治療愛滋病，都是健保支付，全民買單」這句話其實並不算錯，但實務上並不會有「拖垮健保」的狀況，也跟同性婚姻關係不大，所以不用太擔心唷。",
            },
          },
        ],
        "text": "外國同性戀藉結婚來台治療愛滋病，都是健保支付，全民買單",
      },
      Object {
        "canDelete": false,
        "id": "p2",
        "paragraphReplies": Array [
          Object {
            "canDelete": false,
            "id": "5bd677ef092a3ee2541b1a1d",
            "reply": Object {
              "id": "r2",
              "text": "國中小的「同志教育」其實一直都在《性別平等教育法實行細則》裡頭，只是在保守團體的打壓之下，在國小的課本中沒有出現過。",
            },
          },
        ],
        "text": "學校對國中小實施同志教育，將成為合法",
      },
    ],
    "sources": Array [
      Object {
        "article": Object {
          "id": "article1",
        },
        "url": "http://google.com",
      },
    ],
    "text": "大法官已釋憲，如果年底公投沒達到500萬票，明年五月台灣將成為亞洲第一個同性可合法結婚的國家。

外國同性戀藉結婚來台治療愛滋病，都是健保支付，全民買單。

學校對國中小實施同志教育，將成為合法。

這次公投要主動向票務員領10、11、12三張公投單選 “同意”

11/24一定要去公投!讓我們盡一份心力保護後代子孫。",
  },
}
`;

exports[`Basic object type graph resolving loads from paragraph as well 1`] = `
Object {
  "paragraph": Object {
    "article": Object {
      "id": "article1",
    },
    "paragraphReplies": Array [
      Object {
        "id": "5bd677bb092a3ee2541b1a0d",
        "reply": Object {
          "id": "r1",
          "text": "「外國同性戀藉結婚來台治療愛滋病，都是健保支付，全民買單」這句話其實並不算錯，但實務上並不會有「拖垮健保」的狀況，也跟同性婚姻關係不大，所以不用太擔心唷。",
        },
      },
    ],
  },
}
`;

exports[`Basic object type graph resolving loads from reply to article 1`] = `
Object {
  "reply": Object {
    "paragraphReplies": Array [
      Object {
        "canDelete": true,
        "id": "5bd677bb092a3ee2541b1a0d",
        "paragraph": Object {
          "article": Object {
            "id": "article1",
          },
          "canDelete": true,
          "id": "p1",
        },
      },
    ],
  },
}
`;
